2007-08-13  Michael Snyder  <msnyder@access-company.com>

	* valops.c: Whitespace clean-up.

	* tui/tui-winsource.c (tui_alloc_source_buffer): Clean up allocation.

	* event-top.c (command_line_handler): Memory leak.

	* mi/mi-cmd-var.c (mi_cmd_var_set_format): Memory leak.
	No need to make copy.

	* source.c (find_source_lines): Require symtab 's'.

2007-08-11  Michael Snyder  <msnyder@access-company.com>

	* completer.c: Spelling fix in comments.

2007-08-10  Michael Snyder  <msnyder@access-company.com>

	* gdbtypes.c: Coding standard cleanup.
	* gdbtypes.c: Comment/whitespace cleanup.

	* stabsread.c (read_huge_number): Attempt to compute value before
	values that it depends on.

	* linespec.c (decode_dollar): Dead code, ptr can't be non-null.
	(decode_objc): Use "NULL" instead of 0.
	(find_method): Ditto.
	(decode_all_digits): Ditto.
	(decode_dollar): Ditto.

	* mi/mi-main.c (mi_cmd_data_evaluate_expression): Resource leak.

	* mi/mi-cmd-var.c (mi_cmd_var_list_children): Memory leak.

	* solib-svr4.c (enable_break): Don't free tmp_pathname until
	after closing bfd.

	* completer.c: Comment/whitespace cleanup.

2007-08-10  Joel Brobecker  <brobecker@adacore.com>

	* Makefile.in (i386nbsd-nat.o): Add missing dependency.

2007-08-10  Maxim Grigoriev  <maxim2405@gmail.com>

	* remote-fileio.c (remote_fileio_resize_fd_map): Initialize newly
	allocated file descriptors.

2007-08-10  Joel Brobecker  <brobecker@adacore.com>

	* Makefile.in: Minor cleanup throughout; add some missing variables,
	add some missing rules, remove some rules that are no longer needed,
	and fix the dependencies in several rules.

2007-08-10  Ludovic Courtès  <ludo@gnu.org>

	* Makefile.in (SFILES): Add scm-{exp,lang,valprint}.c.
	(scm_lang_h, scm_tags_h): New.
	(COMMON_OBS): Add scm-{exp,lang,valprint}.o.
	(scm-exp.o, scm-lang.o, scm-valprint.o): New targets.
	* defs.h (enum language): Add `language_scm'.

	* MAINTAINERS: Add Emacs local variables to use UTF-8 upon
	opening.
