@@ -1,3 +1,9 @@
+2007-08-14  Vladimir Prus  <vladimir@codesourcery.com>
+
+	gdb/
+	* breakpoint.c (update_breakpoints_after_exec): Don't
+	set address to zero.
+
 2007-08-13  Michael Snyder  <msnyder@access-company.com>
 
 	* valops.c: Whitespace clean-up.
